--- a/frontend/CSS/forms-style.css
+++ b/frontend/CSS/forms-style.css
@@ -23,6 +23,7 @@ body::before {
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
     backdrop-filter: blur(10px);
 
     -webkit-backdrop-filter: blur(8px);
@@ -31,7 +32,7 @@ body::before {
 }
 .sign-up , .sign-in {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     gap: 20px;
 }
@@ -57,7 +58,7 @@ body::before {
 .sign-up img ,.sign-in img {
     width: 50%;
     height: 100vh;
-    object-fit: cover; 
+    object-fit: cover;
 }
 
 .field {
@@ -74,10 +75,10 @@ body::before {
 .field {
     animation: fadeIn 0.5s ease forwards;
 }
-.field:nth-of-type(1) { animation-delay: 0.1s; } 
-.field:nth-of-type(2) { animation-delay: 0.2s; } 
-.field:nth-of-type(3) { animation-delay: 0.3s; } 
-.field:nth-of-type(4) { animation-delay: 0.4s; } 
+.field:nth-of-type(1) { animation-delay: 0.1s; }
+.field:nth-of-type(2) { animation-delay: 0.2s; }
+.field:nth-of-type(3) { animation-delay: 0.3s; }
+.field:nth-of-type(4) { animation-delay: 0.4s; }
 
 input {
     border: none;
@@ -85,7 +86,7 @@ input {
     padding: 8px;
     width: 100%;
     background-color: transparent;
-    outline: none; 
+    outline: none;
     transition: all 0.3s ease-in-out;
 }
 
@@ -120,7 +121,7 @@ input::placeholder {
     padding-inline: 20px;
     padding-block: 10px;
     margin-block: 10px;
-    border-radius: 20px; 
+    border-radius: 20px;
     background-color: var(--primary-color);
     color: white !important;
     cursor: pointer;
@@ -162,7 +163,7 @@ input::placeholder {
     margin-top: 4px;
     display: block;
   }
-  
+
 .field.incorrect input {
 border-bottom: 2px solid red;
 }
