--- a/frontend/CSS/admin_dashboard.css
+++ b/frontend/CSS/admin_dashboard.css
@@ -14,7 +14,7 @@ body {
 }
 
 .overlayer {
-    background-color: rgb(0, 0, 0,0.25);
+    background-color: rgb(0, 0, 0,0.2);
     position: fixed;
     height: 100%;
     width: 100%;
@@ -34,6 +34,18 @@ body {
     bottom: 18%;
     border-radius: 20px;
 }
+
+.loading {
+    width: 100%;
+    height: 75%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 70px;
+    color: var(--primary-color);
+}
+
 
 /* @keyframes cancel {
     50% {
@@ -307,7 +319,25 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     padding: 1vw;
+}
+
+.no-results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 5%;
+    padding: 10%;
+    color: var(--primary-color);
+    background-color: var(--form-bg-color);
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px var(--shadow-color);
+}
+
+.no-results h1 {
+    margin-bottom: 1%;
 }
 
 .book {
