--- a/frontend/CSS/borrowed.css
+++ b/frontend/CSS/borrowed.css
@@ -592,3 +592,20 @@
     cursor: pointer;
     color: var(--primary-color) ;
 }
+
+.star-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: transparent;
+    border: none;
+    font-size: 1.8rem;
+    color: grey;
+    cursor: pointer;
+    z-index: 1;
+    transition: color 0.3s ease;
+}
+
+.star-button.active {
+    color: orange;
+}
