--- a/frontend/CSS/profile.css
+++ b/frontend/CSS/profile.css
@@ -8,6 +8,13 @@ body {
     color: var(--text-color);
   }
 
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .profile-container {
   max-width: 800px;
   margin: 100px auto;
@@ -44,17 +51,20 @@ body {
   cursor: pointer;
 }
 
-.upload {
+.upload {  
   border: 2px dashed var(--border-color);
-  padding: 20px;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+  width: 150px;              
+  height: 150px;             
+  border-radius: 50%;        
   margin: 0 auto 15px;
   cursor: pointer;
   background-color: var(--bg-color);
   transition: background-color 0.3s;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
 }
+
 
 .upload:hover {
   background-color: #2d2f34;
