--- a/frontend/CSS/admin_dashboard.css
+++ b/frontend/CSS/admin_dashboard.css
@@ -682,15 +682,28 @@ a {
         width: 45px;
         height: 45px;
     }
+
+    .borrowers-list {
+        top: 10%;
+        bottom: 10%;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+    }
+
+    .borrowers-list .book-details {
+        margin-right: 5%;
+    }
+
+    .users {
+        width: 100%;
+        max-height: 250px;
+    }
 }
 
 @media (max-width: 300px) {
     body {
         width: 300px;
-    }
-
-    .borrowers-list {
-        max-width: 300px;
     }
 }
 
