--- a/frontend/CSS/admin_dashboard.css
+++ b/frontend/CSS/admin_dashboard.css
@@ -95,6 +95,7 @@ body {
     max-height: 400px;
 }
 
+
 .user {
     display: flex;
     margin: 2% 0%;
@@ -105,12 +106,14 @@ body {
     justify-content: center;
     align-items: center;
     margin-right: 10px;
+    margin-left: 10px;
 }
 
 .profile-pic {
     border-radius: 50%;
     width: 50px;
     height: 50px;
+    transition: all 0.3s ease;
 }
 
 .info p {
