--- a/frontend/CSS/_variables.css
+++ b/frontend/CSS/_variables.css
@@ -97,3 +97,10 @@
         --scrolled-header-color: #e8f5e9;
     }
 }
+
+html {
+    scrollbar-width: thin; /* auto | thin | none */
+    scrollbar-color: var(--accent-color) var(--bg-color);
+  }
+  
+
