--- a/frontend/CSS/admin_dashboard.css
+++ b/frontend/CSS/admin_dashboard.css
@@ -66,7 +66,7 @@ body {
 
 .loading {
     width: 100%;
-    height: 75%;
+    height: 100%;
     display: flex;
     text-align: center;
     align-items: center;
@@ -93,6 +93,18 @@ body {
     margin-top: 7%;
     overflow-y: auto;
     max-height: 400px;
+}
+
+.no-users {
+    margin-top: 5%;
+    display: flex;
+    width: 100%;
+    height: 80%;
+    background-color: var(--bg-color);
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .user {
