--- a/frontend/CSS/books.css
+++ b/frontend/CSS/books.css
@@ -68,8 +68,8 @@
     color: var(--text-color);
 }
 
-.alert {
-    background-color: #d8dd47;
+.alert,
+.borrowed {
     color: var(--text-color);
     opacity: 0.9;
     z-index: 200;
@@ -85,7 +85,16 @@
     box-shadow: 0px 0px 15px var(--shadow-color);
 }
 
+.alert {
+    background-color: #FFA500;
+}
+
+.borrowed {
+    background-color: var(--primary-color);
+}
+
 .alert img {
+    transform: scale(0.85);
     margin-left: 10px;
     width: 30%;
     height: 100%;
@@ -95,6 +104,17 @@
     font-weight: bold;
     font-size: 14px;
     margin: 10px;
+}
+
+.borrowed img {
+    width: 30%;
+    height: 150%;
+}
+
+.borrowed p {
+    font-weight: bold;
+    font-size: 14px;
+    margin: 5px;
 }
 
 @keyframes notification {
