--- a/frontend/CSS/book_details.css
+++ b/frontend/CSS/book_details.css
@@ -121,7 +121,7 @@
     border-radius: 6px;
     padding: 20px 7px;
     background-color: transparent;
-    color: white;
+    color: var(--text-color);
     font-weight: 600;
     font-size: 1.1rem;
     border: 2px solid var(--primary-color);
